# obfuscation-LLVM

./: .gitignore  README.md  main.cpp  obfuscate  obfuscate.cpp  setup.sh  test_complex.cpp
obfuscator_pass/: CMakeLists.txt  Obfuscator.cpp
